--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-bully-imageupload",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Smart image/file upload plugin for Hapi.js",
   "main": "lib/hapi-bully-imageupload.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/MichielvdVelde/hapi-bully-imageupload#readme",
   "dependencies": {
-    "digest-stream": "^0.2.2"
+    "digest-stream": "^0.2.2",
+    "node-uuid": "^1.4.7"
   }
 }
